Setting up RunnableServerUnit